feat(consultationBC): added resources