@@ -25,17 +25,17 @@ public class Message {
         this.messageItemList.add(messageItem);
     }
 
-    public void addMessageItems(LegalIssue legalIssue, String message, ProfileId sender) {
+    public void addMessageItems(LegalIssue legalIssue, String message, Long senderId) {
         System.out.println("Adding message item");
         Date date = new Date(System.currentTimeMillis());
-        MessageItem messageItem = new MessageItem(date, legalIssue, message, sender);
+        MessageItem messageItem = new MessageItem(date, legalIssue, message, senderId);
         System.out.println("Message ID " + messageItem.getId());
         messageItemList.add(messageItem);
     }
 
     public MessageItem getLastMessageItem() {
         if (!messageItemList.isEmpty()) {
-            return messageItemList.get(messageItemList.size() - 1);
+            return messageItemList.getLast();
         } else {
             System.out.println("Message list is empty");
             return null;
